--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         $("#tails").on("click", function () {
             tailsCount++
-            $('#tails-chosen').html(tails);
+            $('#tails-chosen').html(tailsCount);
             $('#guess').html('<strong>Tails</strong>')
             flipThatCoin(1);
         });
